@@ -12,7 +12,7 @@ firecookie.Paste=Paste
 firecookie.Delete=Delete
 firecookie.Edit=Edit
 firecookie.Accept=Accept
-firecookie.header.ResetColumns=Reset Columns Width
+firecookie.header.Reset_Header=Reset Header
 firecookie.Intro=You can specify which web sites are always or never allowed to use cookies.\nType the exact address of the site you want to manage and then click Block,\nAllow for Session, or Allow.
 firecookie.ExceptionsTitle=Exceptions - Cookies
 firecookie.confirm.removeall=Do you want to remove all cookies in the list?
