@@ -116,6 +116,28 @@
 }
 
 /************************************************************************************************/
+/* Column visibility */
+
+/*
+ * Every row is for one column, the first selector hides column in the header
+ * (e.g. id=colName) and the second selector in all rows (e.g. class=cookieNameCol)
+ * 
+ * If a column is hidden, it's presented in a 'hiddenCols' attribute of the .cookieTable
+ * element. Value of the attribute is a whitespace separated list of columns IDs.
+ */
+.cookieTable[hiddenCols~=colName] TD[id="colName"], .cookieTable[hiddenCols~=colName] TD.cookieNameCol,
+.cookieTable[hiddenCols~=colValue] TD[id="colValue"], .cookieTable[hiddenCols~=colValue] TD.cookieValueCol,
+.cookieTable[hiddenCols~=colDomain] TD[id="colDomain"], .cookieTable[hiddenCols~=colDomain] TD.cookieDomainCol,
+.cookieTable[hiddenCols~=colSize] TD[id="colSize"], .cookieTable[hiddenCols~=colSize] TD.cookieSizeCol,
+.cookieTable[hiddenCols~=colPath] TD[id="colPath"], .cookieTable[hiddenCols~=colPath] TD.cookiePathCol,
+.cookieTable[hiddenCols~=colExpires] TD[id="colExpires"], .cookieTable[hiddenCols~=colExpires] TD.cookieExpiresCol,
+.cookieTable[hiddenCols~=colHttpOnly] TD[id="colHttpOnly"], .cookieTable[hiddenCols~=colHttpOnly] TD.cookieHttpOnlyCol,
+.cookieTable[hiddenCols~=colSecurity] TD[id="colSecurity"], .cookieTable[hiddenCols~=colSecurity] TD.cookieSecurityCol,
+.cookieTable[hiddenCols~=colStatus] TD[id="colStatus"], .cookieTable[hiddenCols~=colStatus] TD.cookieStatusCol {
+    display: none;
+}
+
+/************************************************************************************************/
 
 .cookieRow .cookieNameLabel {
     background-image: url(chrome://firebug/skin/win/twistyClosed.png);
